dump tomcat.perm